--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 
 dependencies:
+  easy_localization: ^3.0.3
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
@@ -24,4 +25,14 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/translations/
+
+  fonts:
+    - family: TT-Norms-Pro-Trial
+      fonts:
+        - asset: assets/fonts/TT Norms Pro Trial Regular.ttf
+          weight: 400
+        - asset: assets/fonts/TT Norms Pro Trial Medium.ttf
+          weight: 500
+
 
