--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,16 @@ dependencies:
   easy_localization: ^3.0.3
   flutter:
     sdk: flutter
+  flutter_mobx: ^2.1.0
   flutter_svg: ^2.0.7
+  mobx: ^2.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mobx_codegen: ^2.4.0
+  build_runner: ^2.4.6
 
 
 flutter:
