--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.1.0
   flutter_svg: ^2.0.7
+  get_it: ^7.6.4
   mobx: ^2.2.0
 
 dev_dependencies:
