--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,10 @@ dependencies:
   flutter_mobx: ^2.1.0
   flutter_svg: ^2.0.7
   get_it: ^7.6.4
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   mobx: ^2.2.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -24,6 +27,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mobx_codegen: ^2.4.0
   build_runner: ^2.4.6
+  isar_generator: ^3.1.0+1
 
 
 flutter:
